<resources>
    <string name="app_name">CompraYVenta</string>
    <string name="default_web_client_id">376475644157-s1theksu6uiaddfu0c0oathggt5alqrc.apps.googleusercontent.com</string>

    <string name="item_inicio">Inicio</string>
    <string name="item_chats">Chats</string>
    <string name="itmem_vender">Vender</string>
    <string name="item_mis_anuncios">Anuncios</string>
    <string name="item_cuenta">Cuenta</string>

    <string name="titulo_rl">Titulo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ingresar_email">Ingresar con email</string>
    <string name="ingresar_google">Ingresar con Google</string>

    <string name="txt_login">Login de Usuario</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="txt_no_cuenta">No tienes una cuenta?</string>
    <string name="txt_registrarme">Registrarme</string>

    <string name="txt_registro">Registro de Usuario</string>
    <string name="et_r_password">Repetir Contraseña</string>
    <string name="btn_registrar">Registrar</string>

    <string name="btn_cerrar_sesion">Cerrar Sesion</string>
    <string name="txt_opciones">Opciones</string>
    <string name="btn_editar_perfil">Editar Perfil</string>

    <string name="txt_perfil">Perfil de Usuario</string>
    <string name="txt_info">Información:</string>
    <string name="txt_nombres">Nombres:</string>
    <string name="tv_nombres">Nombres Completos</string>
    <string name="txt_email">Email:</string>
    <string name="tv_email">Email@dominio.com</string>
    <string name="txt_nacimiento">Fecha de nacimiento:</string>
    <string name="tv_nacmimento">dd/mm/aaaa</string>
    <string name="txt_miembro">Miembro desde:</string>
    <string name="tv_miembro">dd/mm/aaaa</string>
    <string name="txt_telefono">Teléfono:</string>
    <string name="tv_telefono">999999999</string>
    <string name="txt_estado_cuenta">Estado de cuenta:</string>
    <string name="tv_estado_cuenta">No verificado</string>

    <string name="txtEditarPerfil">Editar Perfil</string>
    <string name="etNombres">Nombres Completos</string>
    <string name="etFechaNac">Fecha de Nacimiento</string>
    <string name="codTel"> +00 </string>
    <string name="etTelefono">Telefono</string>
    <string name="btnActualizar">Actualizar</string>

    <string name="et_marca">Nombre de la marca</string>
    <string name="categoria">Categoria</string>
    <string name="condicion">Condicion</string>
    <string name="locacion">Locacion</string>
    <string name="precio">Precio</string>
    <string name="tituli">Titulo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="btnCrearAnuncio">Crear anuncio</string>


    <string name="txt_seleccionar_ubicacion">Seleccione su ubicacion</string>
    <string name="btn_listo">Listo</string>
    <string name="mi_maps_key">AIzaSyCirLNaIv1WtAqbbLofXqHRk3b_tJ7zDSU</string>

    <string name="tv_locacion">Elija una locacion</string>
    <string name="et_buscar">Buscar</string>
    <string name="txt_categoria">Categorias</string>
    <string name="tv_categoria">Categoria</string>


    <string name="tv_titulo">Nombre del producto</string>
    <string name="tv_descripcion">Descripcion del producto, se podra vizualizar un maximo de 3 lineas</string>
    <string name="tv_direccion">Direccion</string>
    <string name="tv_condicion">Nuevo</string>
    <string name="tv_simbolo">$</string>
    <string name="tv_precio">0</string>
    <string name="tv_fecha">dd/MM/YYY</string>

    <string name="txt_detalle_info">Detalle del anuncio</string>
    <string name="tv_cat">Categoria del anuncio</string>
    <string name="txt_titulo">Titulo</string>
    <string name="txt_descripcion">Descripcion</string>
    <string name="tv_descr">Descripcion del anuncio</string>
    <string name="txt_direccion">Direccion</string>
    <string name="txt_descr_vendedor">Descripcion del vendedor</string>
    <string name="tv_Estado">Disponible</string>
    <string name="txt_estado">Estado</string>

    <string name="btn_mapa">Mapa</string>
    <string name="btn_llamar">Llamar</string>
    <string name="btn_sms">SMS</string>
    <string name="btn_chat">Chat</string>

    <string name="txt_eliminar">Segurx?</string>
    <string name="btn_si">Si</string>
    <string name="btn_no">Cancelar</string>
    <string name="txt_marcar_vendido">Marcar como vendido?</string>

    <string name="txt_perfil_vendedor">Perdil del vendedor</string>
    <string name="txt_anuncios">Anuncios Publicados: </string>
    <string name="tv_no_anuncios">0 </string>

    <string name="imagenContadorTv">1/4</string>

</resources>